# kiro-health-monitor

./: .gitignore  LICENSE  POWER.md  README.md  mcp.json  power.json  pyproject.toml
.kiro/hooks/: manual-health-check.json
.kiro/specs/kiro-health-monitor/: .config.kiro  design.md  requirements.md  tasks.md
kiro_health_monitor/: __init__.py  __main__.py  log.py  types.py
kiro_health_monitor/config/: __init__.py  config_manager.py
kiro_health_monitor/core/: __init__.py  health_monitor_core.py
kiro_health_monitor/detectors/: __init__.py  heartbeat_checker.py  task_status_detector.py  window_resume_detector.py
kiro_health_monitor/notifications/: __init__.py  notification_manager.py
kiro_health_monitor/tools/: __init__.py  mcp_server.py
src/: __main__.py  types.py
src/config/: config_manager.py
src/core/: __init__.py  health_monitor_core.py
src/detectors/: __init__.py  heartbeat_checker.py  task_status_detector.py  window_resume_detector.py
src/notifications/: __init__.py  notification_manager.py
src/tools/: __init__.py  mcp_server.py
tests/: __init__.py  test_background_heartbeat.py  test_integration.py
